<resources>

    <string name="app_name">Cashii</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="withdraw">Withdraw</string>

<!--            Client Ads Id-->
        <string name="fb_app_id">669605703945018</string>
        <string name="rectangle_ad">669605703945018_670156973889891</string>
        <string name="native_ad">669605703945018_670155733890015</string>
        <string name="rewarded_video_ad">669605703945018_670148427224079</string>

    <string name="share">Share</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_us">Rate us</string>
    <string name="more_apps">More Apps</string>
    <string name="play_store_link">https://play.google.com/store/apps/details?id=</string>
    <string name="congratulation">Congratulation</string>
    <string name="spin_amp_win"><![CDATA[Spin & Win]]></string>
    <string name="win_real_cash">Play &amp; Win</string>

</resources>