<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/share" />
        <item
            android:id="@+id/privacy_policy"
            android:icon="@drawable/ic_baseline_security_24"
            android:title="@string/privacy_policy" />
        <item
            android:id="@+id/rate_us"
            android:icon="@drawable/ic_baseline_star_rate_24"
            android:title="@string/rate_us" />
        <item
            android:id="@+id/spin_app_link"
            android:icon="@drawable/spin"
            android:title="@string/spin_amp_win" />
        <item
            android:id="@+id/more_apps"
            android:icon="@drawable/ic_baseline_apps_24"
            android:title="@string/more_apps" />
    </group>
</menu>